package BaiTapThucHanh.ChangeOfRes;

public abstract class GiaiThuong {
    public abstract GiaiThuong giaiThuongKeTiep(GiaiThuong g);
    public abstract String doVeSo(String ve_so);
}
