package bai_tap.change_of_res.doveso;

public abstract class AbstractDoVeSo {
    public abstract AbstractDoVeSo veSoKeTiep(AbstractDoVeSo d);
    public abstract String doveSo(String veso);
}
